syntax = "proto3";

package gs.ext.service.permission;

import "konekko.me/gosion/commons/dto/commons.proto";

//验证
service Verification {

    //是否有权限
    rpc Check (HasPermissionRequest) returns (HasPermissionResponse);

}

message HasPermissionRequest {

}

message HasPermissionResponse {
    gs.commons.dto.State state = 1;
    string user = 2;
    string appId = 3;
    string clientId = 4;
    string traceId = 5;
    string ip = 6;
    string userAgent = 7;
    string userDevice = 8;
    int64 platform = 9;
    TokenInfo token = 10;
    int64 appType = 11;
}

message TokenInfo {
    string userId = 1;
    string clientId = 2;
    int64 platform = 3;
    string relation = 4;
    string appId = 5;
    int64 appType = 6;
}